--- a/ij.html
+++ b/ij.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<applet codebase="." code="ij.ImageJApplet.class" width=0 height=0>
+<applet codebase="." code="ij.ImageJApplet.class" archive="ij.jar" width=0 height=0>
 </applet>
 
 </body>
