--- a/ij.html
+++ b/ij.html
@@ -1,8 +1,8 @@
-<!-- Runs ImageJ as an Apple -->
+<!-- Runs ImageJA as an Applet -->
 
 <html>
 <head>
-<title>ImageJ Applet</title>
+<title>ImageJA Applet</title>
 </head>
 <body>
 
@@ -10,4 +10,4 @@
 </applet>
 
 </body>
-</html>
+</html>
