Synchronize to upstream 1.35q
git-svn-id: http://code.imagej.net/svn/imagej/branches/ijx@85 be23795f-a60e-40d4-ba19-055798872e57

--- a/applet.html
+++ b/applet.html
@@ -1,8 +1,8 @@
-<!-- Runs ImageJ as an Applet -->
+<!-- Runs ImageJA as an Applet -->
 
 <html>
 <head>
-<title>ImageJ Applet</title>
+<title>ImageJA Applet</title>
 </head>
 <body>
 
