alpha version of embedded (SDI) Applet
git-svn-id: http://code.imagej.net/svn/imagej/branches/ijx@170 be23795f-a60e-40d4-ba19-055798872e57

--- a/applet.html
+++ b/applet.html
@@ -1,12 +1,15 @@
-<!-- Runs ImageJ as an Applet -->
+<!-- Runs ImageJA as an Applet -->
 
 <html>
 <head>
-<title>ImageJ Applet</title>
+<title>ImageJA Applet</title>
 </head>
-<body>
+<body bgcolor=gray>
 
-<applet codebase="." code="ij.ImageJApplet.class" archive="ij.jar" width=0 height=0>
+<applet codebase="." code="ij.ImageJApplet.class" archive="ij.jar"
+	width=750 height=550>
+<param name=url1 value=aboutja.jpg>
+<param name=url2 value=icon.gif>
 </applet>
 
 </body>
