• 1.38s, 24 May 2007       □ The Gaussian Blur and Unsharp Mask filters now display a single         progress bar instead of two or six.       □ When saving in JPEG format, the current quality setting (0-100) is         displayed in the title bar of the "Save As" dialog.       □ Added the ROI Manager More>>Remove Slice Info and More>>Specify         commands.       □ The ROI Manager Measure command no longer displays a "Process Stack?"         dialog.       □ ImageJ now opens gzipped FITS (".fits.gz") and raw (".gz") images.       □ The File.directory and File.name macro functions now return the path         to the last file dragged and dropped on the ImageJ window.       □ Added the getDimensions(width,height,channels,slices,frames) macro         function.       □ Added the IJ.getScreenSize() method.       □ Added a getBounds() method to the Line class.       □ Added the OpenDialog.setLastDirectory() and OpenDialog.setLastName()         methods.       □ Added the setInitialParameters(double[]) method to the CurveFitter         class.       □ Fixed bugs that could cause ImageJ to hang, especially when using the         Sync_Windows plugin or when quitting.       □ Fixed a bug that sometimes caused File>New>Image and File>Open to         display duplicate dialog boxes when invoked by typing ctrl-n or         ctrl-o.       □ Fixed a bug that caused dialog boxes to be incorrectly positioned on         multi-monitor Linux systems.       □ Fixed a bug that caused the standard deviation calculated by Analyze>         Tools>Curve Fitting to be incorrect.       □ Fixed a bug that could cause an exception when opening 16-bit         grayscale PNGs.       □ Fixed a bug that caused directories with spaces in the path to fail to         open when dragged and dropped on the ImageJ window.       □ Fixed a bug that could cause an exception in the particle analyzer         when processing a stack with more than 10,000 particles and "Add to         Manager" was checked in the dialog

--- a/release-notes.html
+++ b/release-notes.html
@@ -5,26 +5,36 @@
 </head>
 <body>
 
-<li> <u>1.41h, 14 July 2008</u>
+<li> <u>1.38s, 24 May 2007</u>
 <ul>
-<li> Added the <i>Plugins&gt;Macros&gt;Edit</i> command, which replaces the <i>Plugins&gt;Edit</i> command
-removed in v1.41g. There is also a plugin version of the <i>Edit</i>
-at <a href="http://rsb.info.nih.gov/ij/plugins/download/jars/Edit_.jar">rsb.info.nih.gov/ij/plugins/download/jars/Edit_.jar</a>.
-<li>  JavaScript programs with an underscore in the name and a ".js" extension
-are installed in the Plugins menu at startup.
-<li>  Opens 16-bit grayscale AVIs created by 
-MIL (Matrox Imaging Library), thanks to a patch by Reinhard Mayr.
-<li> Fixed a bug that caused selections extending beyond the image
-boundary to not be correctly copied to the clipboard.
-<li> Fixed a bug that caused the round() macro function to not work
-correctly with NaN and infinite arguments.
-<li> Fixed a bug that caused images to no longer be displayed after 
-aborting a batch mode macro by pressing Esc.
-<li> Fixed a bug that caused the
-<a href="http://rsb.info.nih.gov/ij/developer/macro/functions.html#setOption">setOption("QueueMacros",true)</a>
-macro function to not work as expectde with macros using a function key shortcut.
-<li> Fixed a bug that caused the ROI Manager "Update" option to hold a
-reference to the image, preventing it from being garbage collected.
+<li>The <i>Gaussian Blur </i>and <i>Unsharp Mask</i> filters now display a single progress bar instead of 
+two (grayscale images) or six (RGB images).
+<li> When saving in JPEG format, the current quality setting (0-100) is displayed in the title bar of
+the "Save As" dialog.
+<li> Added the ROI Manager <i>More&gt;&gt;Remove Slice Info</i> and <i>More&gt;&gt;Specify</i> commands.
+<li> The ROI Manager <i>Measure</i> command no longer displays a "Process Stack?" dialog.
+<li> ImageJ now opens gzipped FITS (".fits.gz") and raw (".gz") images.
+<li> The File.directory and File.name macro functions now return the path to the last file dragged and dropped
+on the ImageJ window.
+<li> Added the getDimensions(width,height,channels,slices,frames) macro function.
+<li> Added the IJ.getScreenSize() method.
+<li> Added a getBounds() method to the Line class.
+<li> Added the OpenDialog.setLastDirectory() and OpenDialog.setLastName() methods.
+<li> Added the setInitialParameters(double[]) method to the CurveFitter class.
+<li> Fixed bugs that could cause ImageJ to hang, especially when using the Sync_Windows plugin or when quitting.
+<li> Fixed a bug that sometimes caused <i>File&gt;New&gt;Image</i> and <i>File&gt;Open</i> to display 
+a duplicate dialog box when invoked by typing ctrl-n or ctrl-o.
+<li> Fixed a bug that caused dialog boxes to be incorrectly positioned on multi-monitor Linux systems.
+<li> Fixed a bug that caused the standard deviation calculated by <i>Analyze&gt;Tools&gt;Curve Fitting</i>
+to be incorrect.
+<li> Fixed a bug that could cause an exception when opening 16-bit grayscale PNGs.
+<li> Fixed a bug that caused directories with spaces in the path to fail to open when dragged 
+and dropped on the ImageJ window.
+<li> Fixed a bug that could cause an exception in the particle analyzer when
+processing a stack with more than 10,000 particles and adding them to the ROI Manager.
+<li> Fixed a bug, introduced in v1.38q, that caused stacks with blank slice labels
+to not be correctly saved in TIFF format.
+<li> Fixed a bug, introduced in v1.38n,  that could cause an exception when opening multiple 48-bit tiff images using JFileChooser.
 </ul>
 
 </body>
