• 1.38v, 29 June 2007       □ Added preview and grid options to Image>Rotate>Arbitrarily.       □ Added the Help>Installation command.       □ Added the get(int), set(int,int), getf(int), setf(int,float) and         getPixelCount() ImageProcessor methods for reading and writing pixels         using a pixel array index instead of x and y coordinates.       □ Fixed bugs in Image>Adjust>Threshold, and the setThreshold() and         setAutoThreshold() macro functions, that caused the threshold to not         be set correctly on blank 16-bit and 32-bit images.       □ Fixed bugs that could cause Process>Binary>Convert to Mask to fail on         16-bit and 32-bit stacks with blank slices, or with high dynamic range         16 and 32 bit images.
git-svn-id: http://code.imagej.net/svn/imagej/branches/ijx@209 be23795f-a60e-40d4-ba19-055798872e57

--- a/release-notes.html
+++ b/release-notes.html
@@ -5,32 +5,18 @@
 </head>
 <body>
 
-<li> <u>1.38u, 15 June 2007</u>
+<li> <u>1.38v, 22 June 2007</u>
 <ul>
-<li> 	Michael Schmid added preview options to the <i>Gaussian Blue</i> and <i>Unsharp Mask</i> filters,
-speeded up (by up to 100 times!) and added preview options to the <i>Median</i>, <i>Mean</i>, <i>Minimun</i>, 
-<i>Maximum</i> and <i>Variance</i> filters,
-and contributed the new <i>Process&gt;Noise&gt;Remove Outliers</i> command.
-<li> Added a preview option to <i>Process&gt;Filter&gt;Convolve</i> and 
-removed the square kernel restriction.
-<li> Results tables are no longer limited to 150 columns.
-<li> The makeLine() macro function now accepts a 5th argument that specifies the line width.
-<li> Fixed a bug that causes entries in the <i>File&gt;Open Recent</i> submenu to not be
-stored correctly in the preferences file if they contained non-ascii characters.
-<li> Fixed a bug that could cause an exception when using the
-<i>Edit&gt;Selection&gt;Create Selection</i> command.
-<li> Ulf Dittmer fixed a bug on Mac OS X that could cause
-the same image to be opened repeatedly when several images 
-were dragged onto the ImageJ icon. 
-<li>  Fixed a bug, introduced in v1.38s, that caused a
-delay when running a command for the first time.
-<li> Fixed a bug on Windows that caused the Prefs.getHomeDir(), Menus.getPlugInsPath(), Menus.getMacrosPath()
- methods and the getDirectory() macro function to sometimes return paths containing double path separators.
-<li> Fixed a bug that caused <i>File&gt;Export&gt;Image Sequence</i> to fail when "Use Slice Labels as File Names" was checked in the dialog
-and the names contained multiple periods.
-<li> Fixed a bug that sometimes caused text files containing the word "macro" to not open.
-<li> Fixed a bug that could cause the ROI Manager "Multi Measure" function, and the Multi_Measure plugin, to fail
-when the were a large number of ROIs.
+<li> Added preview and grid options to <i>Image&gt;Rotate&gt;Arbitrarily</i>.
+<li> Added the <i>Help&gt;Installation</i> command.
+<li> Added the get(int), set(int,int), getf(int), setf(int,float) and getPixelCount() ImageProcessor methods
+for reading and writing pixels using a pixel array index instead of x and y coordinates.
+<li> Fixed bugs in <i>Image&gt;Adjust&gt;Threshold</i> and the setThreshold()
+and setAutoThreshold() macro functions that caused the threshold to not be
+set correctly on blank 16-bit and 32-bit images.
+<li> Fixed bugs that could cause <i>Process&gt;Binary&gt;Convert to Mask</i> to fail
+on 16-bit and 32-bit stacks with blank slices, 
+or with high dynamic range 16 and 32 bit images.
 </ul>
 
 </body>
