• 1.38x, 9 July 2007       □ Fixed a bug, introduced in v1.38u, that caused the Analyze>Calibrate         command to fail.       □ Fixed a bug that caused a macro error if the File>Import>Results         dialog was canceled.       □ Fixed a bug that caused image names to be truncated when saving if the         name contained a period followed by a digit or more than four         characters.       □ Fixed a bug that caused stack metadata to be lost after use of the         Image>Adjust>Canvas Size command.
git-svn-id: http://code.imagej.net/svn/imagej/branches/ijx@216 be23795f-a60e-40d4-ba19-055798872e57

--- a/release-notes.html
+++ b/release-notes.html
@@ -5,14 +5,17 @@
 </head>
 <body>
 
-<li> <u>1.38w, 2 July 2007</u>
+<li> <u>1.38x, 9 July 2007</u>
 <ul>
-<li> Fixed a bug, introduced in v1.38u, that caused the
-<a href="http://imagescience.bigr.nl/meijering/software/transformj/">TransformJ</a>
- plugins to throw an exception.
-<li> Fixed a bug, introduced in v1.38u, that caused the
-<a href="http://www.gcsca.net/IJ/Dynamic.html">Dynamic Threshold</a>
- plugin to throw an exception.
+<li> Fixed a bug, introduced in v1.38u, that caused the <i>Analyze&gt;Calibrate</i>
+command to fail.
+<li> Fixed a bug that caused a macro error if the 
+<i>File&gt;Import&gt;Results</i> dialog was canceled.
+<li>Fixed a bug that caused image names to be truncated 
+when saving if the name contained a period followed by a
+digit or more than four characters.
+<li> Fixed a bug that caused stack metadata to be lost after use of
+the <i>Image&gt;Adjust&gt;Canvas Size</i> command.
 </ul>
 
 </body>
