--- a/release-notes.html
+++ b/release-notes.html
@@ -5,32 +5,19 @@
 </head>
 <body>
 
-<li> <u>1.39c, 7 August 2007</u>
+<li> <u>1.39d, 23 August 2007</u>
 <ul>
-<li> Added a "Set Color" button to the ROI Manager's <i>More&gt;&gt;Options</i> dialog 
-that sets the color used in "Show All" mode.
-<li> The selection brush tool now adds to the selection if you click in it 
-and subtracts from it if you click outside it. Or hold down the shift key to 
-add to the selection or hold the alt key down to subtract from it. 
-<li> The 
-<a href="http://rsb.info.nih.gov/ij/macros/MacroExtensions.txt">MacroExtension interface</a>,
-contributed by Shannon Stewman, allows 
-plugins to add functions to the macro language. As an example, the Image5D_Extensions plugin 
-(<a href="http://rsb.info.nih.gov/ij/plugins/download/Image5D_Extensions.java">source</a>,
-<a href="http://rsb.info.nih.gov/ij/plugins/download/Image5D_Extensions.class">.class</a>)
-adds functions to the macro language that deal with the Image5D plugin 
-(querying and setting the channel, frame, display mode), and the
-<a href="http://rsb.info.nih.gov/ij/macros/Image5dMacros.txt">Image5dMacros</a>
-use these functions.
-<li> Fixed a bug, introduced in 1.38q, that caused TIFF stacks saved by the Image5D plugin to be corrupted.
-<li> Fixed a bug that caused an exception when an Image5D stack was duplicated.
-<li> Johannes Schindelin contributed a patch that provides a better error message and a stack trace when
-a method called by the call() macro function throws an exception.
-<li> Johannes Schindelin contributed patches that fix bugs in the Roi Manager "Split" command.
-<li> Fixed a bug that caused 48-bit RGB TIFFs created by ImageJ to not open correctly in other applications.
-<li> Michael Schmid fixed a bug in the <i>Process&gt;Binary&gt;Watershed</i> that could 
-cause particles to disappear. A test image is
-<a href="http://rsb.info.nih.gov/ij/images/watershed-problem.gif">available</a>.
+<li> Added the "Gif Transparent Index" field to <i>Edit&gt;Options&gt;Input-Output</i>,
+which allows the user to specify the transparent color used when saving in GIF format.
+<li> <i>File&gt;Save As&gt;Gif</i> now saves stacks as animated Gifs.
+<li> RoiManager function calls are now faster in batch mode macros. On Windows, the
+<a href="http://rsb.info.nih.gov/ij/macros/RoiManagerSpeedTest.txt">RoiManagerSpeedTest</a>
+macro is 10 times faster.
+<li> <i>Edit&gt;Selection&gt;Rotate</i> and the makeLine() macro function 
+no longer convert coordinate values to integers.
+<li> Added seek(long) and getLongFilePointer() methods to the RandomAccessStream class.
+<li> Fixed bugs in <i>Image&gt;Stacks&gt;Reslice</i>
+<li> Fixed a bug that caused incorrect interpolated line profiles along image edges.
 </ul>
 
 </body>
