--- a/release-notes.html
+++ b/release-notes.html
@@ -5,27 +5,43 @@
 </head>
 <body>
 
-<li> <u>1.39e, 21 September 2007</u>
+<li> <u>1.39f, 9 October 2007</u>
 <ul>
-<li> Added the <i>Image&gt;Stacks&gt;Stack to HyperVolume</i> and <i>HyperVolume to Stack</i>
-commands, which are based on the Stack_to_Image5D class in Joachim Walter's
-Image5D plugin.
-<li> Extended the StackWindow class to support hypervolumes (4D and 5D stacks).
-Use the
-<a href="http://rsb.info.nih.gov/ij/macros/HyperVolume_Maker.txt">HyperVolume Maker</a>
-macro to create sample hypervolumes.
-<li> Toolbar menu commands are now recorded.
-<li> The setLocation(x,y) macro function now moves non-image windows.
-<li> Added the getValue("foreground.color") and getValue("background.color") macro functions.
-<li> Added the setOption("OpenAsHyperVolume", boolean) macro function.
-<li> Added the setOpenAsHyperVolume(boolean) and getOpenAsHyperVolume() methods to
-the ImagePlus class.
-<li> As a work around for a problem on Linux where dialog boxes are sometimes slow to open,
-run ImageJ using the Motif toolkit with<br>
-&nbsp;&nbsp;&nbsp;<i>java -Dawt.toolkit=sun.awt.motif.MToolkit -jar ij.jar</i>
-<li> Fixed a bug, introduced in v1.38, that caused the threshold color to not be taken
-into account when saving in AVI format.
-<li> Fixed a bug that sometimes caused toolbar menus to not display currectly on Linux.
+<li> Michiel Schmid contributed an improved <i>Process&gt;Subtract Background</i>
+command with new "Create Background", "Disable Smoothing" and "Preview" dialog options.
+<li> Added the "Transparent2" mode (zero pixels are transparent) to
+<i>Edit&gt;Paste Control</i>.
+<li> Maximized windows use more of the screen on OS X and Windows.
+<li> When shrinking selections, <i>Edit&gt;Selection&gt;Enlarge</i> 
+now works with selections touching the image edge.
+<li> <i>File&gt;Revert</i> no longer deletes the selection.
+<li> <i>Plugins&gt;Compile and Run</i> now runs compiled plugins
+(.class files) without the Java compiler (usually in tools.jar) being present.
+And, thanks to Johannes Schindelin, it uses
+com.sun.tools.javac instead of the deprecated sun.tools.javac.
+<li> On Linux, the preferences file (IJ_Prefs.txt) is saved in the .imagej 
+directory and the menu font size is no longer set to 14 points.
+<li> The ImageCanvas.setDisplayList(Vector) method now accepts a list
+of ShapeRois with differing colors and line widths
+(<a href="download/MultiColor_Graphic_Overlay.java">example</a>).
+<li> Added the File.openAsRawString(path) macro function.
+Refer to the
+<a href="http://rsb.info.nih.gov/ij/macros/First10Bytes.txt">First10Bytes</a>
+and
+<a href="http://rsb.info.nih.gov/ij/macros/ZapGremlins.txt">ZapGremlins</a>
+macros for examples.
+<li> Added the COPY_ZERO_TRANSPARENT constant to the Blitter class.
+<li> Added the IJ.isMacro() method, which returns true if a macro is running
+or an IJ.run() method is executing.
+<li> Added the getInstanceColor() and setStroke() methods to the Roi class.
+<li> Fixed a bug that could cause the imageCalculator() macro function
+to return before the output window had opened.
+<li> Fixed a bug that could cause a boolean variable in a macro run() call
+to trigger the inclusion of other boolean variables. 
+<li> Fixed a bug that caused an exception if showProgress() was
+called in a macro run from the command line using the -batch option.
+<li> Fixed a bug that could cause the image count to increase by one if
+the setBatchMode(true) macro function was called twice in succession.
 </ul>
 
 </body>
