--- a/release-notes.html
+++ b/release-notes.html
@@ -5,13 +5,17 @@
 </head>
 <body>
 
-<li> <u>1.39h, 5 November 2007</u>
+<li> <u>1.39i, 8 November 2007</u>
 <ul>
-<li> Added the HS.isHyperStack(), HS.getPosition(), HS.setPosition(),
-HS.setChannel(), HS.setSlice() and HS.setFrame() macro functions
-(<a href="http://rsb.info.nih.gov/ij/macros/HyperStackDemo.txt">example</a>).
-
-<li> Fixed a bug, introduced in 1.39g, that caused <i>Plugins&gt;Compile and Run</i> to fail when using Java 1.6.
+<li> Updated to support <A HREF="http://rsb.info.nih.gov/ij/download/osx/ImageJ64.zip">ImageJ64</A>
+is a launcher for Mac OS X Leopard that runs ImageJ in 64-bit mode.
+It requires a Mac with a 64-bit Intel processor and
+at least 3 GB of memory.
+<li> Column headers are now included when copying data from the Results window.
+<li> Tables created by <i>Analyze&gt;Gels</i> are now compatible with the nResults() 
+and getResult() macro functions.
+<li> Reverted to reading PNGs using Toolkit.createImage(), rather than ImageIO, which is much slower and does
+not correctly read some 8-bit PNGs.
 </ul>
 
 </body>
